Add `currentYear` shortcode and use it for year in footer
That way, it is automatically updated, assuming I make any commit every
year

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -5,7 +5,7 @@
             <title id="copyleftTitleID">Copyleft</title>
             <circle cx="490" cy="490" r="440" fill="none" stroke-width="100"/><path d="M219,428H350a150,150 0 1 1 0,125H219a275,275 0 1 0 0-125z"/>
         </svg>
-        2023 <a href="{{ '/' | url }}" class="font-medium" target="_blank" rel="noopener noreferrer">{{ site.title }}</a>.
+        {% currentYear %} <a href="{{ '/' | url }}" class="font-medium" target="_blank" rel="noopener noreferrer">{{ site.title }}</a>.
         Made by <a href="{{ maintainer.homepage | url }}" target="_blank" rel="noopener noreferrer">{{ maintainer.name }}</a>
         using <a href="https://www.11ty.dev" target="_blank" rel="noopener noreferrer">Eleventy</a> and <a href="https://tailwindcss.com" target="_blank" rel="noopener noreferrer">Tailwind CSS</a>.
     </div>
