Special Keybindings → Special Keybinding Schemes

--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -113,7 +113,7 @@ keybindings: []
                     <td>{{ showCategoricalArray(OS, "N/A") }}</td>
                 </tr>
                 <tr>
-                    <td>Special Keybindings</td>
+                    <td>Special Keybinding Schemes</td>
                     <td>{{ showCategoricalArray(keybindings, "None") }}</td>
                 </tr>
             </tbody>
