--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -139,7 +139,7 @@
 <br>
 
 <fieldset class="flex flex-col">
-    <legend>Keybindings</legend>
+    <legend>Keybinding Scheme</legend>
     {% for keybindingsScheme in collections.posts | mapToDbField("keybindings") | flatten | sort | uniq %}
         <label class="inline-flex items-center mt-3">
             <input type="checkbox" name="keybindings" value="{{ keybindingsScheme }}" onclick="updatePostGrid(this)" class="keymap-filter form-checkbox h-5 w-5 text-gray-600">
